# chess-engine

./: .gitignore  CMakeLists.txt
src/engine/: bitboard.cpp  bitboard.h  boardstate.cpp  boardstate.h  boardstateModifications.cpp  boardstatePseudolegal.cpp  castlingavailability.h  decisiontree.cpp  decisiontree.h  engine.cpp  engine.h  fenparser.cpp  fenparser.h  movemaps.cpp  movemaps.h  piece.cpp  piece.h  pieces.h
src/uci/: uci.cpp  uci.h
